Add link to store.pug in index.pug

--- a/src/templates/pages/index.pug
+++ b/src/templates/pages/index.pug
@@ -13,7 +13,7 @@ block content
 						| Every cup of our great Supreme espresso begins with locally sourced, hand picked ingredients.
 						| After you try it, our coffee may be a pleased addition for your everyday morning routine - we assure it!
 					.intro-button.mx-auto
-						a.btn.btn-primary.btn-xl(href="#") Visit Us Today!
+						a.btn.btn-primary.btn-xl(href="store.html") Visit Us Today!
 	section.page-section.cta
 		.container
 			.row
