Update footer date

--- a/src/templates/footer.pug
+++ b/src/templates/footer.pug
@@ -1,6 +1,6 @@
 footer.footer.text-faded.text-center.py-5
 	.container
 		p.m-0.small
-			| Copyright © 2018 
-			a(href="devmeed.com")
+			| Copyright © 2019 
+			a(href="https://devmeed.com")
 				span.text-primary DMeed
